<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTime"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="49dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEdit"
        android:layout_width="429dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="398dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtonErstellen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutEditInnen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewNumberEdit"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPlusEdit"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonPlusEdit" />

            <Button
                android:id="@+id/buttonMinusEdit"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonMinusEdit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSpeichernStart"
        android:layout_width="384dp"
        android:layout_height="83dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSpeichern" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewNew"
        android:layout_width="322dp"
        android:layout_height="374dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtonErstellen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutButtonErstellen"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginBottom="115dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPlusNeu"
            android:layout_width="135dp"
            android:layout_height="49dp"
            android:layout_marginBottom="6dp"
            android:text="@string/buttonPlusNeu" />

        <Button
            android:id="@+id/buttonMinusNeu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMinusNeu" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>